# finans-haber-botu

./: .gitignore  Dockerfile  README.md  database.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily_bot.yaml
content_bot/: ai_agent.py  email_service.py  reporter.py
content_bot/models/: news.py
content_bot/pages/: base_page.py  bloomberg_page.py  doviz_page.py  ekonomim_page.py  haberturk_page.py
content_bot/templates/: newsletter.html
tests/: check_db.py  check_models.py  test_brain.py  test_env.py  test_html.py
